[gd_scene load_steps=22 format=3 uid="uid://b04ypyftnjnk4"]

[ext_resource type="Texture2D" uid="uid://cm37suyjlrgee" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Star/B/Idle/lv2-2_4wayblaster_star_B_idle_0001.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dpacd0rcmd0p1" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Star/B/Idle/lv2-2_4wayblaster_star_B_idle_0002.png" id="2"]
[ext_resource type="Texture2D" uid="uid://8by08wuwpsgh" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Star/B/Idle/lv2-2_4wayblaster_star_B_idle_0003.png" id="3"]
[ext_resource type="Texture2D" uid="uid://d21mua044tcno" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Star/B/Idle/lv2-2_4wayblaster_star_B_idle_0004.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cjlydksofi3jl" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Star/B/Idle/lv2-2_4wayblaster_star_B_idle_0005.png" id="5"]
[ext_resource type="Texture2D" uid="uid://exo5ypkjkojb" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Star/B/Shoot/lv2-2_4wayblaster_star_B_shoot_0001.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cvteqirl25tje" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Star/B/Shoot/lv2-2_4wayblaster_star_B_shoot_0002.png" id="7"]
[ext_resource type="Texture2D" uid="uid://ugy4p75dymv7" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Star/B/Shoot/lv2-2_4wayblaster_star_B_shoot_0003.png" id="8"]
[ext_resource type="Texture2D" uid="uid://o7rp804bh1tv" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Barrel/Rotate/lv2-2_4wayblaster_barrel_rotation_0001.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cp8j0g3yxqlm3" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Barrel/Rotate/lv2-2_4wayblaster_barrel_rotation_0002.png" id="10"]
[ext_resource type="Texture2D" uid="uid://ctlwjee0nxw4j" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Barrel/Rotate/lv2-2_4wayblaster_barrel_rotation_0003.png" id="11"]
[ext_resource type="Texture2D" uid="uid://dl7li7pk6fvlq" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Barrel/Shoot/Horizontal/lv2-2_4wayblaster_barrel_0004.png" id="11_swn2q"]
[ext_resource type="Texture2D" uid="uid://uhvef468355o" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Barrel/Rotate/lv2-2_4wayblaster_barrel_rotation_0004.png" id="12"]
[ext_resource type="Texture2D" uid="uid://bb6m01iwp4wke" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Barrel/Shoot/Horizontal/lv2-2_4wayblaster_barrel_0003.png" id="12_hq8bo"]
[ext_resource type="Texture2D" uid="uid://cekj86i37meko" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Barrel/Rotate/lv2-2_4wayblaster_barrel_rotation_0005.png" id="13"]
[ext_resource type="Texture2D" uid="uid://bnmat32s51m17" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Barrel/Shoot/Horizontal/lv2-2_4wayblaster_barrel_0002.png" id="13_j6u13"]
[ext_resource type="Texture2D" uid="uid://cvfa8agmbcnh2" path="res://Funhouse Frazzle Enemies Cuphead/Four Way Blaster/Barrel/Shoot/Horizontal/lv2-2_4wayblaster_barrel_0001.png" id="14_g5vtn"]
[ext_resource type="Script" uid="uid://kb42dywpqu2i" path="res://scene/funfair_fever/four_way_blaster.gd" id="25"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}],
"loop": false,
"name": &"rotate",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_swn2q")
}, {
"duration": 1.0,
"texture": ExtResource("12_hq8bo")
}, {
"duration": 1.0,
"texture": ExtResource("13_j6u13")
}, {
"duration": 1.0,
"texture": ExtResource("14_g5vtn")
}, {
"duration": 1.0,
"texture": ExtResource("13_j6u13")
}, {
"duration": 1.0,
"texture": ExtResource("12_hq8bo")
}, {
"duration": 1.0,
"texture": ExtResource("11_swn2q")
}],
"loop": false,
"name": &"shoot",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="3"]
radius = 83.02409

[node name="FourWayBlaster" type="Area2D"]
collision_layer = 2
script = ExtResource("25")

[node name="Star" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(0, -6)
sprite_frames = SubResource("1")
animation = &"shoot"
frame = 2
frame_progress = 1.0

[node name="Barrel" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("2")
animation = &"shoot"

[node name="BarrelV" type="AnimatedSprite2D" parent="."]
z_index = 1
rotation = 1.5707964
sprite_frames = SubResource("2")
animation = &"shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("3")

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
